--- a/src/paginas/contacto.html
+++ b/src/paginas/contacto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Contacto</title>
     <!-- BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,12 +18,12 @@
     <div class="header">
 
         <div class="header_logo">
-            <img src="/multimedia/imagenes/logo.png" alt="">
+            <img src="../multimedia/imagenes/logo.png" alt="">
         </div>
         <!-- NAV BAR -->
 
 
-        <nav class="navbar navbar-expand-lg navbar-light navbar-left header_menu" style="justify-content: flex-center">
+        <nav class="navbar navbar-expand-lg navbar-light navbar-left header_menu" style="justify-content: flex-end">
             <div class="container-fluid" style="justify-content: flex-end">
 
                 <button class="navbar-toggler navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -31,17 +31,17 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-center panelmenu" id="navbarNav">
                     <ul class="navbar-nav menu d-flex justify-content-right">
 
-                        <li class="menu_item"><a id="inicio" href="../index.html">Inicio</a></li>
+                        <li class="menu_item"><a id="inicio" href="/index.html">Inicio</a></li>
                         <li class="menu_item">
                             <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
-                            <a href="../index.html#acercadenosotros">Acerca de Nosotros</a>
+                            <a href="/index.html#acercadenosotros">Acerca de Nosotros</a>
                         </li>
-                        <li class="menu_item"> <a href="galeria.html">Galeria de Trabajos</a></li>
-                        <li class="menu_item"><a href="productos.html">Productos</a></li>
-                        <li class="menu_item"><a href="contacto.html">Contacto</a></li>
+                        <li class="menu_item"> <a href="../paginas/galeria.html">Galeria de Trabajos</a></li>
+                        <li class="menu_item"><a href="../paginas/productos.html">Productos</a></li>
+                        <li class="menu_item"><a href="../paginas/contacto.html">Contacto</a></li>
 
 
                     </ul>
@@ -51,6 +51,8 @@
 
         <!-- TERMINA EL NAV BAR-->
     </div>
+
+
     <div class="contenedor_padre_contacto">
 
         <div class="contenedor_contacto">
@@ -103,72 +105,71 @@
         </div>
 
 
-        <!--comienza el footer-->
-        <div class="row footer">
-            <!-- Empieza: Footer -->
-            <footer class="text-center text-white" style="background-color: #f1f1f1;">
-                <!-- Grid container -->
-                <div class="container pt-4">
-                    <!-- Section: Social media -->
-                    <div class="row mb-4">
 
-                        <div class="col">
-                            <div class="row">
-                                <!-- LOGO FACEBOOK -->
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
-                                    href="https://www.facebook.com/petit.bocatto.7" role="button"
-                                    data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                        src="../multimedia/imagenes/facebook.png" alt=""></a>
+    </div>
+      <!-- Comienza: FOOTER -->
+      <div class="row footer mt-5">
 
-                                </a>
-                            </div>
-                            <div class="row">
-                                <!-- LOGO INSTAGRAM -->
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
-                                    href="https://www.instagram.com/petit.bocatto" role="button"
-                                    data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                        src="../multimedia/imagenes/instagram.png" alt=""></img></a>
+        <footer class="text-center text-white" style="background-color: #f1f1f1;">
+            <!-- Grid container -->
+            <div class="container pt-4">
+                <!-- Section: Social media -->
+                <div class="row mb-4">
 
-                            </div>
+                    <div class="col">
+                        <div class="row">
+                            <!-- LOGO FACEBOOK -->
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                href="https://www.facebook.com/petit.bocatto.7" role="button"
+                                data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/facebook.png" alt=""></a>
 
+                            </a>
                         </div>
-                        <div class="col d-flex ">
-                            <div class="row ">
-                                <!-- LOGO PETIT BOCATTO - FOOTER -->
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
-                                    href="../index.html" role="button" data-mdb-ripple-color="dark"><img
-                                        id="logo_petit_footer" src="../multimedia/imagenes/logo.png" alt=""></a>
+                        <div class="row">
+                            <!-- LOGO INSTAGRAM -->
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                href="https://www.instagram.com/petit.bocatto" role="button"
+                                data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/instagram.png" alt=""></img></a>
 
-                            </div>
-                        </div>
-                        <div class="col">
-                            <!-- LOGO MAPS -->
-                            <div class="row">
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
-                                    href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
-                                    data-mdb-ripple-color="dark">Corneille 4071 <img class="logo_contacto_footer"
-                                        src="../multimedia/imagenes/pin_mapa.png" alt=""></a>
-
-
-                            </div>
-                            <div class="row">
-                                <!-- LOGO TELEFONO -->
-                                <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="#!" role="button"
-                                    data-mdb-ripple-color="dark">091 999 999<img class="logo_contacto_footer"
-                                        src="../multimedia/imagenes/telefono-movil.png" alt=""></a>
-
-                            </div>
                         </div>
 
                     </div>
+                    <div class="col d-flex ">
+                        <div class="row ">
+                            <!-- LOGO PETIT BOCATTO - FOOTER -->
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
+                                href="/index.html" role="button" data-mdb-ripple-color="dark"><img
+                                    id="logo_petit_footer" src="../multimedia/imagenes/logo.png" alt=""></a>
 
-            </footer>
-            <!-- Termina: Footer-->
+                        </div>
+                    </div>
+                    <div class="col">
+                        <!-- LOGO MAPS -->
+                        <div class="row">
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                                href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
+                                data-mdb-ripple-color="dark">Corneille 4071 <img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/pin_mapa.png" alt=""></a>
 
-        </div>
-        <!--termina el footer-->
+
+                        </div>
+                        <div class="row">
+                            <!-- LOGO TELEFONO -->
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="#!" role="button"
+                                data-mdb-ripple-color="dark">091 999 999<img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/telefono-movil.png" alt=""></a>
+
+                        </div>
+                    </div>
+
+                </div>
+
+        </footer>
 
     </div>
+    <!--termina el footer-->
     <!-- BOOTSTRAP SEPARATE-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
