--- a/src/paginas/galeria.html
+++ b/src/paginas/galeria.html
@@ -2,14 +2,12 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petit Bocato</title>
-
     <!-- CSS-->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../../css/style.css" >
+    <title>Galeria</title>
     <!-- BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,12 +15,16 @@
 </head>
 
 <body>
+
+
     <div class="header">
 
         <div class="header_logo">
-            <img src="./src/multimedia/imagenes/logo.png" alt="">
+            <img src="../multimedia/imagenes/logo.png" alt="">
         </div>
         <!-- NAV BAR -->
+
+
         <nav class="navbar navbar-expand-lg navbar-light navbar-left header_menu" style="justify-content: flex-end">
             <div class="container-fluid" style="justify-content: flex-end">
 
@@ -34,14 +36,14 @@
                 <div class="collapse navbar-collapse justify-content-center panelmenu" id="navbarNav">
                     <ul class="navbar-nav menu d-flex justify-content-right">
 
-                        <li class="menu_item"><a id="inicio" href="index.html">Inicio</a></li>
+                        <li class="menu_item"><a id="inicio" href="/index.html">Inicio</a></li>
                         <li class="menu_item">
                             <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
-                            <a href="#acercadenosotros">Acerca de Nosotros</a>
+                            <a href="/index.html#acercadenosotros">Acerca de Nosotros</a>
                         </li>
-                        <li class="menu_item"> <a href="src/paginas/galeria.html">Galeria de Trabajos</a></li>
-                        <li class="menu_item"><a href="src/paginas/productos.html">Productos</a></li>
-                        <li class="menu_item"><a href="src/paginas/contacto.html">Contacto</a></li>
+                        <li class="menu_item"> <a href="../paginas/galeria.html">Galeria de Trabajos</a></li>
+                        <li class="menu_item"><a href="../paginas/productos.html">Productos</a></li>
+                        <li class="menu_item"><a href="../paginas/contacto.html">Contacto</a></li>
 
 
                     </ul>
@@ -51,31 +53,37 @@
 
         <!-- TERMINA EL NAV BAR-->
     </div>
-    <div class="container">
 
-        <div class="row pagina__titulo">
-            <div class="col titulo">
-                <h1>Bienvenidos a <p class="letra_logo" style="font-size: 5rem;">Petit Bocatto</p>
-                </h1>
+
+    <div class="container">
+        <div class="row mb-5">
+            <div class="pagina__titulo">
+                <div>
+                    <h1>Galeria de Trabajos</h1>
+                </div>
             </div>
         </div>
-
         <div class="row">
-
-        </div>
-        <div class="row">
-            <!--  Empieza Carousel-->
             <div class="col d-flex justify-content-center mb-5">
                 <div id="carouselExampleControls" class="carousel slide w-50 " data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="src/multimedia/imagenes/chaja.jpeg" class="d-block w-100" alt="...">
+                            <img src="../multimedia/imagenes/rogel.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="src/multimedia/imagenes/bombon-choco50.jpeg" class="d-block w-100" alt="...">
+                            <img src="../multimedia/imagenes/bombon-choco50.jpeg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="src/multimedia/imagenes/frutos-rojos.jpeg" class="d-block w-100" alt="...">
+                            <img src="../multimedia/imagenes/frutos-rojos.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../multimedia/imagenes/rogel.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../multimedia/imagenes/cupcakes.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../multimedia/imagenes/bombon-choco50.jpeg" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -89,39 +97,20 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-
             </div>
-            <!--  Termina Carousel-->
         </div>
 
-        <!--Comienza: Acerca de nosotros-->
-        <div class="card m-2">
-            <div class="row g-0">
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h2 class="acercanos_titulo" id="acercadenosotros"> Acerca de Nosotros </h2>
-                        <p class=" card-text">Somos una familia emprendedora! El amor por los dulces era tal, que
-                            un día decidimos estudiar para poder hacer por nuestras propias manos la mesa de
-                            dulces de los cumples de nuestros peques. Nuestros invitados quedaron tan contentos
-                            con el resultado que poco a poco nos empezaron a hacer pedidos, y así nos embarcamos
-                            en este viaje tan tan lindo que nos llena el alma: Petit Bocatto.</p>
 
-                    </div>
-                </div>
-                <div class="col-md-4 p-3">
-                    <img src="src/multimedia/imagenes/familia.jpeg" class="img-fluid rounded-start" alt="...">
-                </div>
-            </div>
 
-            <!--Termina: Acerca de nosotros-->
-        </div>
+
+
 
 
     </div>
-    
-    <!--comienza el footer-->
-    <div class="row footer mt-5">
-        <!-- Empieza: Footer -->
+
+      <!-- Comienza: FOOTER -->
+      <div class="row footer mt-5">
+
         <footer class="text-center text-white" style="background-color: #f1f1f1;">
             <!-- Grid container -->
             <div class="container pt-4">
@@ -134,7 +123,7 @@
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://www.facebook.com/petit.bocatto.7" role="button"
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="./src/multimedia/imagenes/facebook.png" alt=""></a>
+                                    src="../multimedia/imagenes/facebook.png" alt=""></a>
 
                             </a>
                         </div>
@@ -143,7 +132,7 @@
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://www.instagram.com/petit.bocatto" role="button"
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="./src/multimedia/imagenes/instagram.png" alt=""></img></a>
+                                    src="../multimedia/imagenes/instagram.png" alt=""></img></a>
 
                         </div>
 
@@ -152,8 +141,8 @@
                         <div class="row ">
                             <!-- LOGO PETIT BOCATTO - FOOTER -->
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
-                                href="../index.html" role="button" data-mdb-ripple-color="dark"><img
-                                    id="logo_petit_footer" src="./src/multimedia/imagenes/logo.png" alt=""></a>
+                                href="/index.html" role="button" data-mdb-ripple-color="dark"><img
+                                    id="logo_petit_footer" src="../multimedia/imagenes/logo.png" alt=""></a>
 
                         </div>
                     </div>
@@ -163,7 +152,7 @@
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
                                 data-mdb-ripple-color="dark">Corneille 4071 <img class="logo_contacto_footer"
-                                    src="./src/multimedia/imagenes/pin_mapa.png" alt=""></a>
+                                    src="../multimedia/imagenes/pin_mapa.png" alt=""></a>
 
 
                         </div>
@@ -171,7 +160,7 @@
                             <!-- LOGO TELEFONO -->
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="#!" role="button"
                                 data-mdb-ripple-color="dark">091 999 999<img class="logo_contacto_footer"
-                                    src="multimedia/imagenes/telefono-movil.png" alt=""></a>
+                                    src="../multimedia/imagenes/telefono-movil.png" alt=""></a>
 
                         </div>
                     </div>
@@ -179,11 +168,9 @@
                 </div>
 
         </footer>
-        <!-- Termina: Footer-->
 
     </div>
     <!--termina el footer-->
-    <!-- BOOTSTRAP SEPARATE-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
