--- a/src/paginas/productos.html
+++ b/src/paginas/productos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Productos</title>
     <!-- BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +18,7 @@
     <div class="header">
 
         <div class="header_logo">
-            <img src="/multimedia/imagenes/logo.png" alt="">
+            <img src="../multimedia/imagenes/logo.png" alt="">
         </div>
         <!-- NAV BAR -->
 
@@ -31,17 +31,17 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-center panelmenu" id="navbarNav">
                     <ul class="navbar-nav menu d-flex justify-content-right">
 
-                        <li class="menu_item"><a id="inicio" href="../index.html">Inicio</a></li>
+                        <li class="menu_item"><a id="inicio" href="/index.html">Inicio</a></li>
                         <li class="menu_item">
                             <!--Enlace interno /redirigir a la seccion Acerca de Nosotros en la pagina de inicio-->
-                            <a href="../index.html#acercadenosotros">Acerca de Nosotros</a>
+                            <a href="/index.html#acercadenosotros">Acerca de Nosotros</a>
                         </li>
-                        <li class="menu_item"> <a href="galeria.html">Galeria de Trabajos</a></li>
-                        <li class="menu_item"><a href="productos.html">Productos</a></li>
-                        <li class="menu_item"><a href="contacto.html">Contacto</a></li>
+                        <li class="menu_item"> <a href="../paginas/galeria.html">Galeria de Trabajos</a></li>
+                        <li class="menu_item"><a href="../paginas/productos.html">Productos</a></li>
+                        <li class="menu_item"><a href="../paginas/contacto.html">Contacto</a></li>
 
 
                     </ul>
@@ -182,7 +182,7 @@
         </div>
     </div>
     <!-- Comienza: FOOTER -->
-    <div class="row footer">
+    <div class="row footer mt-5">
 
         <footer class="text-center text-white" style="background-color: #f1f1f1;">
             <!-- Grid container -->
@@ -214,7 +214,7 @@
                         <div class="row ">
                             <!-- LOGO PETIT BOCATTO - FOOTER -->
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
-                                href="../index.html" role="button" data-mdb-ripple-color="dark"><img
+                                href="/index.html" role="button" data-mdb-ripple-color="dark"><img
                                     id="logo_petit_footer" src="../multimedia/imagenes/logo.png" alt=""></a>
 
                         </div>
