--- a/src/paginas/contacto.html
+++ b/src/paginas/contacto.html
@@ -8,8 +8,8 @@
     <!-- CSS-->
     <link rel="stylesheet" href="../../css/style.css">
     <title>Contacto</title>
-     <!-- FAVICON -->
-     <link rel="shortcut icon" href="../multimedia/imagenes/favicon.ico" type="image/x-icon">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="../multimedia/imagenes/favicon.ico" type="image/x-icon">
 
     <!-- BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,7 +20,7 @@
 <body>
     <div class="header">
 
-        <div class="header_logo">
+        <div id="logo_menu2" class="header_logo">
             <img src="../multimedia/imagenes/logo.png" alt="Logo Petit Bocatto">
         </div>
         <!-- NAV BAR -->
@@ -110,22 +110,22 @@
 
 
     </div>
-      <!-- Comienza: FOOTER -->
-      <div class="row footer mt-5">
-
+    <!--comienza el footer-->
+    <div id="footer_contenido"class="row footer mt-5">
+        <!-- Empieza: Footer -->
         <footer class="text-center text-white" style="background-color: #f1f1f1;">
             <!-- Grid container -->
             <div class="container pt-4">
                 <!-- Section: Social media -->
-                <div class="row mb-4">
+                <div class="row d-inline-flex flex-column align-items-center pb-3">
 
-                    <div class="col">
+                    <div class="col-lg-6 col-md-6 mb-0 mb-md-0 d-flex">
                         <div class="row">
                             <!-- LOGO FACEBOOK -->
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://www.facebook.com/petit.bocatto.7" role="button"
                                 data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/facebook.png" alt="Logo Facebook"></a>
+                                    src="../multimedia/imagenes/facebook.png" alt="Logo facebook"></a>
 
                             </a>
                         </div>
@@ -137,42 +137,44 @@
                                     src="../multimedia/imagenes/instagram.png" alt="Logo Instagram"></img></a>
 
                         </div>
-
-                    </div>
-                    <div class="col d-flex ">
-                        <div class="row ">
-                            <!-- LOGO PETIT BOCATTO - FOOTER -->
-                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
-                                href="/index.html" role="button" data-mdb-ripple-color="dark"><img
-                                    id="logo_petit_footer" src="../multimedia/imagenes/logo.png" alt="Logo Petit Bocatto"></a>
-
-                        </div>
-                    </div>
-                    <div class="col">
                         <!-- LOGO MAPS -->
                         <div class="row">
                             <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                                 href="https://goo.gl/maps/6eGbhzfFqPH5duuc7" role="button"
-                                data-mdb-ripple-color="dark">Corneille 4071 <img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/pin_mapa.png" alt="Logo pin de ubicación en mapa"></a>
+                                data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/pin_mapa.png"
+                                    alt="Logo pin de ubicación en mapa"></a>
 
 
                         </div>
                         <div class="row">
                             <!-- LOGO TELEFONO -->
-                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="#!" role="button"
-                                data-mdb-ripple-color="dark">091 999 999<img class="logo_contacto_footer"
-                                    src="../multimedia/imagenes/telefono-movil.png" alt="Logo contacto telefónico"></a>
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 " href="tel:+34000000000" role="button"
+                                data-mdb-ripple-color="dark"><img class="logo_contacto_footer"
+                                    src="../multimedia/imagenes/telefono-movil.png"
+                                    alt="Logo contacto telefónico"></a>
+
+                        </div>
+
+                    </div>
+                    <div class="col-lg-6 col-md-6 mb-0 mb-md-0">
+                        <div class="row ">
+                            <!-- LOGO PETIT BOCATTO - FOOTER -->
+                            <a class="btn btn-link btn-floating btn-lg text-dark m-1 d-flex justify-content-center"
+                                href="/index.html" role="button" data-mdb-ripple-color="dark"><img
+                                    id="logo_petit_footer" src="../multimedia/imagenes/logo.png"
+                                    alt="Logo Petit Bocatto"></a>
 
                         </div>
                     </div>
+                    
 
                 </div>
 
         </footer>
+        <!-- Termina: Footer-->
 
-    </div>
-    <!--termina el footer-->
+
     <!-- BOOTSTRAP SEPARATE-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
