--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     <!-- FAVICON -->
     <link rel="shortcut icon" href="/src/multimedia/imagenes/favicon.ico" type="image/x-icon">
 
-    <!-- CSS-->
-    <link rel="stylesheet" href="./css/style.css">
     <!-- BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- CSS-->
+    <link rel="stylesheet" href="./css/style.css">
+
+    
 
 </head>
 
@@ -121,9 +123,9 @@
         <div class="card m-2">
             <div class="row g-0">
                 <div class="col-md-8 col-sm-12">
-                    <div class="card-body">
-                        <h2 class="acercanos_titulo" id="acercadenosotros"> Acerca de Nosotros </h2>
-                        <p class=" card-text">Somos una familia emprendedora! El amor por los dulces era tal, que
+                    <div class="card-body m-5">
+                        <h2 class="acercanos_titulo text-center" id="acercadenosotros"> Acerca de Nosotros </h2>
+                        <p class="card-text text-center">Somos una familia emprendedora! El amor por los dulces era tal, que
                             un día decidimos estudiar para poder hacer por nuestras propias manos la mesa de
                             dulces de los cumples de nuestros peques. Nuestros invitados quedaron tan contentos
                             con el resultado que poco a poco nos empezaron a hacer pedidos, y así nos embarcamos
