--- a/src/paginas/contacto.html
+++ b/src/paginas/contacto.html
@@ -5,15 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
     <!-- CSS-->
     <link rel="stylesheet" href="../../css/style.css">
     <title>Contacto</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="../multimedia/imagenes/favicon.ico" type="image/x-icon">
 
-    <!-- BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- OPEN GRAPH / REDES SOCIALES-->
+    <meta property="og:title" content="Quiero mi presupuesto a medida">
+    <meta property="og:description"
+        content="Te presupuestamos tu pedido gratis! Y podemos orientarte que opcion es mejor la ocasión: postres, tortas, mesas dulces para eventos,souvenirs, galletitas personalizadas, cajas meriendas y desayuno sorpresa.">
+    <meta property="og:url" content="https://petitbocatto1.000webhostapp.com/src/paginas/contacto.html">
+    <meta property="og:image"
+        content="https://petitbocatto1.000webhostapp.com/src/multimedia/imagenes/cards/mujermaravilla.webp">
+
 
 </head>
 
