--- a/src/paginas/galeria.html
+++ b/src/paginas/galeria.html
@@ -5,14 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS-->
-    <link rel="stylesheet" href="../../css/style.css">
-    <title>Galeria</title>
+
     <!-- BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- CSS-->
+    <link rel="stylesheet" href="../../css/style.css">
+    <title>Galeria</title>
+
     <!-- FAVICON -->
     <link rel="shortcut icon" href="../multimedia/imagenes/favicon.ico" type="image/x-icon">
+    <!-- OPEN GRAPH / REDES SOCIALES-->
+    <meta property="og:title" content="Galeria de nuestros mejores Petit Bocattos">
+    <meta property="og:description"
+        content="Te invitamos a disfrtrutar de la galería de fotos de nuestros mejores Petit Bocattos, hay para todos los gustos. Postres frescos y livianos, postres poderosos cargados de chocolate y hasta pequeñas delicias.">
+    <meta property="og:url" content="https://petitbocatto1.000webhostapp.com/src/paginas/contacto.html">
+    <meta property="og:image"
+        content="https://petitbocatto1.000webhostapp.com/src/multimedia/imagenes/torta_infantil5.jpeg">
 </head>
 
 <body>
