--- a/src/paginas/productos.html
+++ b/src/paginas/productos.html
@@ -5,12 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS-->
-    <link rel="stylesheet" href="../../css/style.css">
-    <title>Productos</title>
+
     <!-- BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+    <!-- CSS-->
+    <link rel="stylesheet" href="../../css/style.css">
+    <title>Productos</title>
+
+    <!-- OPEN GRAPH / REDES SOCIALES-->
+    <meta property="og:title" content="Nuestra cartelera de Productos">
+    <meta property="og:description"
+        content="Cartelera de nuestros productos, encontras postres, tortas, mesas dulces para eventos, galletitas personalizadas, cajas meriendas y desayuno sorpresa.">
+    <meta property="og:url" content="https://petitbocatto1.000webhostapp.com/src/paginas/productos.html">
+    <meta property="og:image"
+        content="https://petitbocatto1.000webhostapp.com/src/multimedia/imagenes/cards/chees_cake.webp">
+
+
     <!-- FAVICON -->
     <link rel="shortcut icon" href="../multimedia/imagenes/favicon.ico" type="image/x-icon">
 </head>
@@ -229,7 +242,7 @@
                         </div>
 
                     </div>
-                    
+
                     <div class="col-lg-6 col-md-6 mb-0 mb-md-0">
                         <div class="row ">
                             <!-- LOGO PETIT BOCATTO - FOOTER -->
