--- a/src/paginas/contacto.html
+++ b/src/paginas/contacto.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- descripcion del contenido-->
+    <meta name="description"
+        content="Hacemos postres, tortas, mesas dulces para eventos, galletitas personalizadas, cajas meriendas y desayuno sorpresa.">
+
+    <!-- Palabras claves para búsquedas-->
+    <meta name="keywords"
+        content="tortas para fiestas, postres para fiestas, torta para eventos, postres para eventos, desayuno sorpresa, box desayuno sorpresa, merienda sorpresa, box merienda sorpresa, mesas dulces">
+
+
     <!-- BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
